tools/tree-sitter-lumen/test/corpus/elements.txt
================================================================================
Empty root (fixtures/blank-no-css/main.lmn)
================================================================================

<root />

--------------------------------------------------------------------------------

(document
  (element
    (self_closing_tag
      (tag_name))))

================================================================================
Root with a class and a nested label (sdk/cpp/examples/apps/hello/main.lmn)
================================================================================

<root class="app">
  <column class="page">
    <label class="title" text="Hello from the C++ SDK" />
  </column>
</root>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value))))
      (element
        (self_closing_tag
          (tag_name)
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_value)))
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_value)))))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Attributes wrapped over several lines
================================================================================

<root>
  <label id="shared-label" width="100%" padding="24 0 8 0"
         bind-text="shared" text="waiting" />
</root>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))
    (end_tag
      (tag_name))))

================================================================================
Text content as the element's text
================================================================================

<root>
  <label>Hello</label>
</root>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Colour, gradient, and shadow values (apps/widget-garden/main.lmn)
================================================================================

<row gap="12">
  <tile width="120px" height="80px" bg="#7aa2f7" radius="10" />
  <tile width="120px" height="80px" bg="linear-gradient(90deg, #bb9af7, #f7768e)" radius="10" />
  <tile width="120px" height="80px" bg="#9ece6a" radius="10" shadow="0 4 14 #00000077" />
</row>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))
    (end_tag
      (tag_name))))

================================================================================
Single-quoted attribute value
================================================================================

<root>
  <label text='He said "hi"' />
</root>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))
    (end_tag
      (tag_name))))

================================================================================
Processing instruction
================================================================================

<?xml version="1.0" encoding="UTF-8"?>
<root />

--------------------------------------------------------------------------------

(document
  (processing_instruction)
  (element
    (self_closing_tag
      (tag_name))))
